--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -34,3 +34,9 @@ $linear-gradient-primary: linear-gradient(
   $color-background-secondary,
   $color-background-main
 );
+
+// TRANSPARENT COLORS
+
+$transparent-blue-glass:rgba(95, 179, 218, 0.383);
+$transparent-purple-glass:rgba(241, 160, 255, 0.171);
+$transparent-gold-glass:rgba(255, 234, 43, 0.246);
