--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -1,5 +1,8 @@
 .daily-prep-list {
   // top: 0;
+
+  
+
   &__checkbox {
     display: none;
   }
@@ -16,6 +19,27 @@
     box-shadow: $box-shadow-dark;
     text-align: center;
     cursor: pointer;
+
+    &--label {
+    right: -1rem;
+    // position: absolute;
+    letter-spacing:.5rem;
+    text-transform: uppercase;
+    top: -5rem;
+    position: absolute;
+    font-size: 2rem;
+    text-align: center;
+    // display: block;
+    padding: 1rem;
+    background-image: linear-gradient(
+      to top,
+      $transparent-blue-glass,
+      $transparent-gold-glass
+    );
+
+
+    border-radius: 3rem;
+  }
   }
 
   &__background {
@@ -105,6 +129,7 @@
   &__icon {
     position: relative;
     margin-top: 3.5rem;
+
     &,
     &::before,
     &::after {
