--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,8 @@
 .section-start {
   position: relative;
+  display: 25vh;
   background-color: $color-secondary;
-  padding: 20rem;
+  padding: 5rem;
   margin-top: -1vh;
   border-radius: 1rem;
 
