--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "layout/grid";
 @import "layout/footer";
 @import "layout/dailypreplist";
+@import "layout/section-start";
 
 @import "components/images";
 @import "components/button-regular";
