--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,8 @@
 .section-start {
   position: relative;
-  display: 25vh;
-  background-color: $color-secondary;
-  padding: 5rem;
-  margin-top: -1vh;
+  background-color: $transparent-blue-glass;
+  // margin-top: 1rem;
   border-radius: 1rem;
-
-} 
+  padding: 1rem;
+  
+}
