fixed quick list link nav bar, fixed section start

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -38,5 +38,11 @@ $linear-gradient-primary: linear-gradient(
 // TRANSPARENT COLORS
 
 $transparent-blue-glass:rgba(95, 179, 218, 0.383);
+$transparent-whiteDull-glass:rgba(228, 247, 255, 0.383);
+$transparent-whiteBrite-glass:rgba(255, 249, 249, 0.596);
 $transparent-purple-glass:rgba(241, 160, 255, 0.171);
 $transparent-gold-glass:rgba(255, 234, 43, 0.246);
+
+// BUTTONS
+
+$button-text-color-dark: rgb(31, 31, 31);
