--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
   position: relative;
   background-color: rgba(95, 179, 218, 0.383);
   border-radius: 1rem;
-  padding: 1rem; }
+  padding: 5rem;
+  margin: 0 5rem; }
 
 *,
 *::after,
@@ -55,7 +56,7 @@ body {
     display: block; }
 
 .heading-secondary {
-  display: inline-block;
+  padding: 3rem;
   color: #27424b;
   text-transform: uppercase;
   backface-visibility: hidden;
@@ -235,10 +236,14 @@ body {
   text-align: center; }
 
 .section-start--link:link, .section-start--link:visited {
-  padding: 3rem;
+  margin-left: 3rem;
+  padding: 2rem;
   text-decoration: none;
+  color: #1f1f1f;
   text-transform: uppercase;
-  display: inline-block; }
+  display: inline-block;
+  border-radius: 15rem;
+  background-image: linear-gradient(to bottom, rgba(228, 247, 255, 0.383), rgba(255, 249, 249, 0.596)); }
 
 .icon {
   position: relative;
