--- a/sass/layout/_section-start.scss
+++ b/sass/layout/_section-start.scss
@@ -6,22 +6,33 @@
     width: 100%;
     top: 2rem;
     text-align: center;
-    // position: absolute;
+    
   }
 
   &__list {
     width: 100%;
     text-align: center;
-    // display: inline-block;
+   
   }
 
   &--link {
     &:link,
     &:visited {
-      padding: 3rem;
+        // top: 50rem;
+        margin-left: 3rem;
+      padding: 2rem;
       text-decoration: none;
+      color: $button-text-color-dark;
+
       text-transform: uppercase;
       display: inline-block;
+      border-radius: 15rem;
+
+      background-image: linear-gradient(
+      to bottom,
+      $transparent-whiteDull-glass,
+      $transparent-whiteBrite-glass
+    );
     }
   }
 }
