--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,8 @@
   background-color: $transparent-blue-glass;
   // margin-top: 1rem;
   border-radius: 1rem;
-  padding: 1rem;
+  padding: 5rem;
+  margin: 0 5rem ;
+
   
 }
