started footer logo section

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   background-color: rgba(95, 179, 218, 0.383);
   border-radius: 1rem;
   padding: 5rem;
-  margin: 0 5rem; }
+  margin: 0rem; }
 
 *,
 *::after,
