--- a/sass/layout/_section-start.scss
+++ b/sass/layout/_section-start.scss
@@ -21,6 +21,7 @@
         // top: 50rem;
         margin-left: 3rem;
       padding: 2rem;
+      font-size: 3rem;
       text-decoration: none;
       color: $button-text-color-dark;
 
@@ -33,6 +34,8 @@
       $transparent-whiteDull-glass,
       $transparent-whiteBrite-glass
     );
+
+    box-shadow: $box-shadow-light;
     }
   }
 }
