--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -46,3 +46,10 @@ $transparent-gold-glass:rgba(255, 234, 43, 0.246);
 // BUTTONS
 
 $button-text-color-dark: rgb(31, 31, 31);
+
+
+
+//grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
