--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,30 @@
 }
 
 html {
-  font-size: 62.5%;
+  //this defines what 1 rem is
+  font-size: 62.5%; //  1rem = 10px
+
+  // @include respond(phone) {
+  //   font-size: 50%;
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem = 9px, 9/16 = 50%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; //1rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1rem = 12, 12/16 = 75%
+  }
 }
 
 body {
   box-sizing: border-box;
- 
+  padding: 1rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
