--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,45 @@
         clear: both;
     }
 }
+
+// Media querY manager 
+
+//
+
+// 0 - 600px:     phone    ///
+// 600 - 900px:   tablet
+//  900 - 1200px: tablet landscape
+//  [1200 - 1800]    normal styles apply 
+//   1800px + : Big desktop
+
+
+// @mixin respond-phone {
+//     @media (max-width: 600px) { @content };
+// }
+
+// /*
+// $breakpoint argument choices:
+// -phone
+// -tab-port
+// -tab-land
+// -big-desktop
+// */
+
+// USE EMS FOR MEDIA QEURIES   1 EM  = 16px
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content };   //600px
+    }
+
+     @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content };   //900px
+    }
+    
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content };  //1200px
+    } 
+    
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content };  //1800
+    } 
+}
