--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   font-size: $default-font-size;
   line-height: 1.7rem;
   background-color: $color-background-bright;
-  padding: 1rem;
 }
 .heading-primary {
   display: inline-block;
@@ -21,10 +20,20 @@ body {
   &--main {
     display: block;
     font-size: 7rem;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
     display: block;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+      font-size: 2rem;
+    }
   }
 }
 
