--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -52,4 +52,11 @@ $button-text-color-dark: rgb(31, 31, 31);
 //grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
+
 $gutter-horizontal: 6rem;
+
+
+
+//Test
+$test-color: white;
