--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,7 @@
 html {
   //this defines what 1 rem is
   font-size: 62.5%; //  1rem = 10px
+  // width: 100%;
 
   // @include respond(phone) {
   //   font-size: 50%;
@@ -28,7 +29,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 1rem;
+  padding: .5rem;
 
   @include respond(tab-port) {
     padding: 0;
