--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,10 +11,11 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 90% 0, 100% 100%, 0 100%);
   padding: 10rem;
-  border-radius: 1rem;
+  border-radius: .5rem;
 
   @include respond(phone) {
     clip-path: none;
+    // width: 75%;
     
     }
 
@@ -25,7 +26,8 @@
   }
 
   &__logo {
-    height: 8rem;
+    height: 6rem;
+    // opacity: 50%;
 
     @include respond(phone) {
     height:5rem
