--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 .section-start {
   position: relative;
   background-color: $transparent-blue-glass;
-  // margin-top: 1rem;
-  border-radius: 1rem;
+  margin-top: -1rem;
+  border-radius: .5rem;
   padding: 5rem;
   // margin-bottom: 3rem ;
 }
