added modal still not working correctly

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -17,6 +17,8 @@ $color-background-bright: rgb(255, 241, 219);
 $color-background-secondary: rgba(15, 114, 119, 0.966);
 $color-background-tertiary: rgba(192, 224, 250, 0.911);
 
+$text-color-hover: rgb(255, 251, 219);
+
 //Shadows
 $color-shadow-dark: rgb(24, 22, 22);
 $color-shadow-light: rgb(65, 65, 65);
@@ -42,6 +44,9 @@ $transparent-whiteDull-glass:rgba(228, 247, 255, 0.383);
 $transparent-whiteBrite-glass:rgba(255, 249, 249, 0.596);
 $transparent-purple-glass:rgba(241, 160, 255, 0.171);
 $transparent-gold-glass:rgba(255, 234, 43, 0.246);
+$tinted-glass-smokey:rgba(22, 41, 31, 0.959);
+$tinted-glass-white:rgba(180, 221, 255, 0.986);
+
 
 // BUTTONS
 
