--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,7 @@
 
 @import "components/images";
 @import "components/button-regular";
+@import "components/modal";
+@import "components/overlay";
+@import "components/button-regular"
+
