--- a/css/style.css
+++ b/css/style.css
@@ -63,17 +63,18 @@ body {
   line-height: 8rem; }
   .heading-primary--main {
     display: block;
-    font-size: 7rem; }
+    font-size: 6rem; }
     @media (max-width: 37.5em) {
       .heading-primary--main {
         letter-spacing: 1rem;
-        font-size: 5rem; } }
+        font-size: 3rem; } }
   .heading-primary--sub {
-    display: block; }
+    display: block;
+    font-size: 2rem; }
     @media (max-width: 37.5em) {
       .heading-primary--sub {
         letter-spacing: 0.5rem;
-        font-size: 2rem; } }
+        font-size: 1.5rem; } }
 
 .heading-secondary {
   padding: 3rem;
@@ -315,21 +316,13 @@ body {
   width: 100%;
   text-align: center; }
 
-.section-start--link:link, .section-start--link:visited {
-  padding: 2rem;
-  margin: 2rem;
-  font-size: 2rem;
-  text-decoration: none;
-  color: #1f1f1f;
-  text-transform: uppercase;
-  display: inline-block;
-  border-radius: 15rem;
-  border-bottom: 2px solid white;
-  background-image: linear-gradient(to bottom, rgba(228, 247, 255, 0.383), rgba(255, 249, 249, 0.596));
-  box-shadow: 0.5rem 0.5rem 2rem #c0aeae; }
-  @media (max-width: 37.5em) {
-    .section-start--link:link, .section-start--link:visited {
-      margin: 1rem; } }
+.section-start-button:link:hover, .section-start-button:link:active, .section-start-button:visited:hover, .section-start-button:visited:active {
+  color: #fffbdb;
+  transform: translateY(-0.5rem); }
+
+@media (max-width: 37.5em) {
+  .section-start-button:link, .section-start-button:visited {
+    margin: 1rem; } }
 
 .icon {
   position: relative;
@@ -368,3 +361,209 @@ body {
     animation-duration: 7s;
     animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
     animation-fill-mode: forwards; }
+
+.btn, .btn:link, .btn:visited {
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 2rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
+  border: none;
+  cursor: pointer;
+  margin: 2rem;
+  color: #1f1f1f;
+  border-bottom: 2px solid white;
+  background-image: linear-gradient(to bottom, rgba(228, 247, 255, 0.383), rgba(255, 249, 249, 0.596));
+  box-shadow: 0.5rem 0.5rem 2rem #c0aeae; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0.5rem 0.5rem 2rem #1b1b1b; }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-0.1rem);
+  box-shadow: 0.5rem 0.5rem 2rem #1b1b1b; }
+
+.btn--glass {
+  background-image: linear-gradient(to bottom, rgba(228, 247, 255, 0.383), rgba(255, 249, 249, 0.596)); }
+
+.btn--white {
+  background-color: white;
+  color: #5f5f5f; }
+  .btn--white::after {
+    background-color: white; }
+
+.btn--green {
+  background-color: #c9f1d0;
+  color: white; }
+  .btn--green::after {
+    background-color: #c9f1d0; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s; }
+
+.btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  background-image: linear-gradient(to bottom right, #27424b, rgba(15, 114, 119, 0.966));
+  color: #5f5f5f;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid white;
+  padding: 3px; }
+
+.btn-text:hover {
+  background-color: #afafaf;
+  color: white;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  transform: translateY(0); }
+
+.modal {
+  background-image: linear-gradient(to bottom, rgba(241, 160, 255, 0.171), rgba(95, 179, 218, 0.383));
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  position: fixed;
+  border-bottom: 3px solid white;
+  border-radius: 5px;
+  z-index: 3000;
+  width: 700px;
+  max-width: 80%; }
+  .modal .modal.active {
+    transform: translate(-50%, -50%) scale(1); }
+  .modal__header {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid white; }
+  .modal__title {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 600; }
+  .modal__close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 3rem; }
+  .modal__body {
+    padding: 10px 15px; }
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: 200ms ease-in-out;
+  background-image: linear-gradient(to bottom, rgba(22, 41, 31, 0.959), rgba(180, 221, 255, 0.986));
+  z-index: 2000;
+  pointer-events: none; }
+  #overlay:active {
+    opacity: 1;
+    pointer-events: all; }
+
+.btn, .btn:link, .btn:visited {
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 2rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
+  border: none;
+  cursor: pointer;
+  margin: 2rem;
+  color: #1f1f1f;
+  border-bottom: 2px solid white;
+  background-image: linear-gradient(to bottom, rgba(228, 247, 255, 0.383), rgba(255, 249, 249, 0.596));
+  box-shadow: 0.5rem 0.5rem 2rem #c0aeae; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0.5rem 0.5rem 2rem #1b1b1b; }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-0.1rem);
+  box-shadow: 0.5rem 0.5rem 2rem #1b1b1b; }
+
+.btn--glass {
+  background-image: linear-gradient(to bottom, rgba(228, 247, 255, 0.383), rgba(255, 249, 249, 0.596)); }
+
+.btn--white {
+  background-color: white;
+  color: #5f5f5f; }
+  .btn--white::after {
+    background-color: white; }
+
+.btn--green {
+  background-color: #c9f1d0;
+  color: white; }
+  .btn--green::after {
+    background-color: #c9f1d0; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s; }
+
+.btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  background-image: linear-gradient(to bottom right, #27424b, rgba(15, 114, 119, 0.966));
+  color: #5f5f5f;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid white;
+  padding: 3px; }
+
+.btn-text:hover {
+  background-color: #afafaf;
+  color: white;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  transform: translateY(0); }
