fixed modal functionality, fixed buttons need to populate modals' functionality

--- a/css/style.css
+++ b/css/style.css
@@ -248,12 +248,13 @@ body {
 .daily-prep-list__link:link, .daily-prep-list__link:visited {
   text-shadow: 0.3rem 0.3rem 0.45rem #181616;
   display: inline-block;
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: 300;
   padding: 1rem;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
+  line-height: 6rem;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #95f1f1 50%);
   background-size: 250%;
   transition: all 0.4s; }
@@ -311,18 +312,6 @@ body {
   width: 100%;
   top: 2rem;
   text-align: center; }
-
-.section-start__list {
-  width: 100%;
-  text-align: center; }
-
-.section-start-button:link:hover, .section-start-button:link:active, .section-start-button:visited:hover, .section-start-button:visited:active {
-  color: #fffbdb;
-  transform: translateY(-0.5rem); }
-
-@media (max-width: 37.5em) {
-  .section-start-button:link, .section-start-button:visited {
-    margin: 1rem; } }
 
 .icon {
   position: relative;
@@ -453,7 +442,7 @@ body {
   z-index: 3000;
   width: 700px;
   max-width: 80%; }
-  .modal .modal.active {
+  .modal.active {
     transform: translate(-50%, -50%) scale(1); }
   .modal__header {
     padding: 10px 15px;
@@ -472,7 +461,10 @@ body {
     background: none;
     font-size: 3rem; }
   .modal__body {
-    padding: 10px 15px; }
+    padding: 10px 15px;
+    line-height: 4rem;
+    letter-spacing: .1rem;
+    font-size: 2rem; }
 
 #overlay {
   position: fixed;
@@ -485,7 +477,7 @@ body {
   background-image: linear-gradient(to bottom, rgba(22, 41, 31, 0.959), rgba(180, 221, 255, 0.986));
   z-index: 2000;
   pointer-events: none; }
-  #overlay:active {
+  #overlay.active {
     opacity: 1;
     pointer-events: all; }
 
