--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -102,12 +102,13 @@
     &:visited {
       text-shadow: $text-shadow-dark;
       display: inline-block;
-      font-size: 2rem;
+      font-size: 4rem;
       font-weight: 300;
       padding: 1rem;
       color: $color-white;
       text-decoration: none;
       text-transform: uppercase;
+      line-height: 6rem;
       background-image: linear-gradient(
         120deg,
         transparent 0%,
