--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -118,9 +118,13 @@
       background-size: 250%;
       transition: all 0.4s;
 
-      span {
-        // margin-right: 1.5rem;
-        display: inline-block;
+      @include respond(phone) {
+        // right: 6rem;
+        font-size: 2rem;
+        line-height: 2rem;
+        width: 30rem;
+        max-width: 100%;
+        letter-spacing: .3rem;
       }
     }
 
