--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,5 +19,7 @@
 @import "components/button-regular";
 @import "components/modal";
 @import "components/overlay";
-@import "components/button-regular"
+@import "components/button-regular";
+@import "components/food-cost-calculator";
+
 
