--- a/sass/components/_food-cost-calculator.scss
+++ b/sass/components/_food-cost-calculator.scss
@@ -1,6 +1,8 @@
 .foodCost {
   &__calculator {
+    position: relative;
     @include glassFade;
+    margin-bottom: 5rem;
   }
 
   &__input {
@@ -8,10 +10,18 @@
     text-align: center;
     padding: 1rem;
     display: block;
+    border: none;
+    border-radius: 5px;
+    @include glassFade;
+    margin: 1rem;
+    box-shadow: $box-shadow-dark;
   }
 
   &__inputLabel {
+    display: flexbox;
+    position: absolute;
     text-transform: uppercase;
     font-size: 1.5rem;
+    text-align: left;
   }
 }
