--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -40,6 +40,7 @@ $linear-gradient-primary: linear-gradient(
 // TRANSPARENT COLORS
 
 $transparent-blue-glass:rgba(95, 179, 218, 0.383);
+$transparent-green-glass:rgba(54, 223, 54, 0.383);
 $transparent-whiteDull-glass:rgba(228, 247, 255, 0.383);
 $transparent-whiteBrite-glass:rgba(255, 249, 249, 0.596);
 $transparent-purple-glass:rgba(241, 160, 255, 0.171);
