--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ body {
   transform: translateY(0); }
 
 .modal {
-  background-image: linear-gradient(to bottom, rgba(255, 249, 249, 0.596), rgba(95, 179, 218, 0.383));
+  background-image: linear-gradient(to bottom, rgba(54, 223, 54, 0.383), rgba(95, 179, 218, 0.383));
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
@@ -446,7 +446,10 @@ body {
   border-radius: 5px;
   z-index: 4000;
   width: 700px;
-  max-width: 80%; }
+  max-width: 80%;
+  text-shadow: 0.3rem 0.3rem 0.45rem #181616;
+  color: #f0f7fa;
+  box-shadow: 0.5rem 0.5rem 2rem #1b1b1b; }
   .modal.active {
     transform: translate(-50%, -50%) scale(1); }
   .modal__header {
@@ -461,6 +464,7 @@ body {
     font-weight: 600; }
   .modal__close-button {
     cursor: pointer;
+    color: white;
     border: none;
     outline: none;
     background: none;
@@ -566,24 +570,32 @@ body {
   transform: translateY(0); }
 
 .foodCost__calculator {
+  color: #f0f7fa;
   position: relative;
-  background-image: linear-gradient(to bottom, rgba(255, 249, 249, 0.596), rgba(95, 179, 218, 0.383));
-  margin-bottom: 5rem; }
+  background-image: linear-gradient(to bottom, rgba(22, 41, 31, 0.959), rgba(95, 179, 218, 0.383));
+  margin-bottom: 2rem;
+  padding: 2rem; }
 
 .foodCost__input {
   font-size: 1.5rem;
   text-align: center;
   padding: 1rem;
-  display: block;
   border: none;
+  display: block;
   border-radius: 5px;
   background-image: linear-gradient(to bottom, rgba(255, 249, 249, 0.596), rgba(95, 179, 218, 0.383));
-  margin: 1rem;
+  margin: 2rem;
   box-shadow: 0.5rem 0.5rem 2rem #1b1b1b; }
 
 .foodCost__inputLabel {
-  display: flexbox;
+  display: inline-block;
+  width: 240px;
   position: absolute;
   text-transform: uppercase;
-  font-size: 1.5rem;
-  text-align: left; }
+  font-size: 2rem;
+  text-align: left;
+  color: white; }
+
+.foodCostInputs {
+  display: inline-block;
+  width: 100%; }
